--- a/src/components/ProjectsList/ProjectsList.scss
+++ b/src/components/ProjectsList/ProjectsList.scss
@@ -2,5 +2,22 @@
 
 .projects {
     background-color: $bgDark;
-    padding: 5rem 0;
+    padding: 5rem 7rem;
+
+    @include responsive(tablet) {
+        padding:  2rem;
+    }
+
+    .projects-list {
+        padding-top: 2rem;
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+        @include responsive(tablet) {
+            justify-content: center;
+        }
+    }
 }
