--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -2,34 +2,86 @@
 
 .about {
     background-color: $bgDark;
-    text-align: center;
     color: #ffffff;
-    padding: 5rem 0;
+    padding: 5rem 7rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5rem;
 
     @include responsive(pc) {
         height: auto;
+        padding: 2rem;
     }
 
-    .section-title {
-        margin-top: 3rem;
-        font-size: 4rem;
-        font-family: $titleFont;
+    @include responsive(tablet) {
+        flex-direction: column;
+        justify-content: center;
     }
-    
-    .text {
-        max-width: 70%;
-        margin: 0 auto;
-        font-size: 2rem;
-        line-height: 3rem;
-        
+
+    .left {
+        width: 30%;
+
         @include responsive(tablet) {
-            max-width: 90%;
-            font-size: 1.7rem;
+            width: 100%;
+        }
+
+        img {
+            max-height: 40rem;
+            display: block;
+            border-radius: 2rem;
+
+            @include responsive(tablet) {
+                margin: 0 auto;
+                height: 30rem;
+            }
         }
     }
-    
-    .services-title {
-        font-size: 3rem;
-        margin-top: 3rem;
+
+    .right {
+        width: 70%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 2rem;
+
+        @include responsive(tablet) {
+            width: 100%;
+        }
+
+        .section-title {
+            font-size: 4rem;
+            font-family: $titleFont;
+            text-align: left !important;
+
+            @include responsive(tablet) {
+                font-size: 3rem;
+            }
+        }
+        
+        .text {
+            margin: 0 auto;
+            font-size: 1.8rem;
+            line-height: 3rem;
+            text-align: justify;
+
+            @include responsive(tablet) {
+                font-size: 1.5rem;
+            }
+        }
+        
+        .services-title {
+            font-size: 3rem;
+            margin-top: 3rem;
+        }
+
+        .socials ul {
+            flex-direction: row;
+            justify-content: flex-start;
+            
+            li a svg {
+                font-size: 2.5rem;              
+            }
+        }
     }
 }
