--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,58 +1,101 @@
 @import '../../scss/variables';
 
 .contact {
-    padding: 5rem 0;
-    background-color: $bgDark;
-    text-align: center;
-    color: #ffffff;
-    max-width: 60%;
-    margin: 0 auto;
+    margin: 0 7rem;
+    padding: 5rem;
+    background-color: $bgLight;
+    border-radius: 2rem;
 
-    @include responsive(tablet) {
-        max-width: 90%;
+    @include responsive(giant) {
+        margin: 0 15rem;
     }
 
-    h3 {
-        font-weight: 400;
-        font-size: 2.4rem;
+    @include responsive(tablet) {
+        margin: 0 2rem;
+        padding: 3rem;
+    }
+
+    .flex {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
 
         @include responsive(tablet) {
-            font-size: 2rem;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            gap: 2rem;
+        }
+    
+    }
+
+    form {
+        width: 40%;
+
+        @include responsive(tablet) {
+            width: 100%;
+        }
+
+        label {
+            display: block;
+            font-size: 1.7rem;
+            font-weight: bold;
+            margin-bottom: 0.5rem;
+            color: #ffffff;
+        }
+
+        input, textarea, button {
+            width: 100%;
+            margin-bottom: 1rem;
+            padding: 0.75rem;
+            font-size: 1.5rem;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        textarea {
+            resize: vertical;
+            height: 100px;
+        }
+
+        button {
+            background-color: $lightBlue;
+            max-width: 15rem;
+            color: rgb(0, 0, 0);
+            font-weight: bold;
+            border: none;
+            cursor: pointer;
+            font-size: 1.8rem;
+        }
+
+        input:focus, textarea:focus {
+            outline: none;
+            border-color: $lightBlue;
+            box-shadow: 0 0 4px rgba(0, 123, 255, 0.3);
         }
     }
 
-    .cards {
+    .contact-info {
+        color: #ffffff;
         display: flex;
-        justify-content: center;
-        align-items: stretch;
-        flex-wrap: wrap;
-        gap: 5rem;
-        margin-top: 3rem;
+        flex-direction: column;
+        gap: 3rem;
 
-        .card {
-            background-color: #000000;
-            border: 1px solid $lightBlue;
-            box-shadow: 1px 1px 5px $lightBlue;
-            padding: 2rem;
-            transition: all ease 500ms;
-            flex: 1;
+        @include responsive(tablet) {
+            width: 100%;
+        }
 
-            &:hover {
-                box-shadow: 1px 1px 5px $pink;
-                border: 1px solid $pink;
-            }
+        span {
+            color: #ccc;
+        }
 
-            svg {
-                font-size: 4rem;
-                color: $lightBlue;
-            }
+        p {
+            font-size: 2rem;
 
-            h4 {
-                cursor: default;
-            }
-
-            p {
-                padding-top: 1rem;
+            a {
+                color: #7b74ff;
+                text-decoration: none;
             }
         }
     }
