--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -34,31 +34,15 @@ header {
         }
     }
 
-    a {
+    a { 
         color: #000000;
-        
-        h1 {
-            text-transform: uppercase;
-            background-image: linear-gradient(-225deg, #850e85 0%, #306fb8 29%, #6f38a3 67%, #ce12ce 100%);
-            background-size: auto auto;
-            background-clip: border-box;
-            background-size: 200% auto;
-            color: #fff;
-            background-clip: text;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            animation: colors 4s ease-out infinite;
-            font-weight: bold;
-            letter-spacing: 3px;
 
-            @include responsive(tablet) {
-                font-size: 2.5rem;
-            }
+        img {
+            width: 17rem;
+            height: auto;
 
-            @keyframes colors {
-                to {
-                    background-position: 200% center;
-                }
+            @include responsive(pc) {
+                width: 13rem;
             }
         }
     }
