--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,6 +14,7 @@ $bgLight: #2b2b2b;
 /* Responsive */
 $pc: 1100px;
 $tablet: 768px;
+$giant: 1400px;
 
 @mixin responsive ($medida) {
     @if $medida == pc {
@@ -22,6 +23,10 @@ $tablet: 768px;
         }
     } @else if $medida == tablet {
         @media (max-width: $tablet) {
+            @content;
+        }
+    } @else if $medida == giant {
+        @media (min-width: 1400px) {
             @content;
         }
     }
