add new project 'dublin'

--- a/src/components/ProjectsList/ProjectsList.scss
+++ b/src/components/ProjectsList/ProjectsList.scss
@@ -11,7 +11,7 @@
     .projects-list {
         padding-top: 2rem;
         display: flex;
-        align-items: center;
+        align-items: stretch;
         gap: 2rem;
         flex-wrap: wrap;
         justify-content: space-between;
