new section process with timeline

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -97,6 +97,10 @@
                 color: #7b74ff;
                 text-decoration: none;
             }
+
+            @include responsive (tablet) {
+                font-size: 1.5rem;
+            }
         }
     }
 }
