--- a/src/components/Process/Process.scss
+++ b/src/components/Process/Process.scss
@@ -8,27 +8,32 @@
         padding: 2rem;
     }
 
-    h2 {
-        margin-bottom: 2rem;
+    .subtitle {
+        color: #ffffff;
+        text-align: center;
+        padding-bottom: 2rem;
+        font-size: 1.8rem;
     }
 
-    h3 {
-        display: flex;
-        align-items: center;
-        gap: 1rem;
-
-        span {
-            color: $pink;
-            font-size: 3rem;
-            font-weight: bold;
+    .timeline {
+        h3 {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+    
+            span {
+                color: $pink;
+                font-size: 3rem;
+                font-weight: bold;
+            }
         }
-    }
-
-    p {
-        font-size: 1.5rem !important;
-
-        @media (max-width: 480px) {
-            font-size: 1.2rem !important;
+    
+        p {
+            font-size: 1.5rem !important;
+    
+            @media (max-width: 480px) {
+                font-size: 1.2rem !important;
+            }
         }
     }
 }
