fix error in navigation between views

--- a/src/scss/_resets.scss
+++ b/src/scss/_resets.scss
@@ -43,3 +43,8 @@ header, section, footer {
         padding: 5rem 15rem !important;
     }
 }
+
+.subtitle {
+    max-width: 80%;
+    margin: 0 auto;
+}
