--- a/src/components/ProjectsList/ProjectsList.scss
+++ b/src/components/ProjectsList/ProjectsList.scss
@@ -8,6 +8,13 @@
         padding:  2rem;
     }
 
+    .subtitle {
+        color: #ffffff;
+        font-size: 1.8rem;
+        padding-bottom: 2rem;
+        text-align: center;
+    }
+
     .projects-list {
         padding-top: 2rem;
         display: flex;
