--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -56,6 +56,7 @@
 
             @include responsive(tablet) {
                 font-size: 3rem;
+                text-align: center !important;
             }
         }
         
