--- a/src/scss/_resets.scss
+++ b/src/scss/_resets.scss
@@ -47,13 +47,14 @@ header, section, footer {
 .subtitle {
     max-width: 80%;
     margin: 0 auto;
-    padding-bottom: 2rem;
+    padding: 2rem 0;
     font-size: 1.8rem;
     text-align: center;
     color: #ffffff;
 
     @include responsive(tablet) {
         max-width: 100%;
-        font-size: 1.3rem !important;
+        font-size: 1.5rem !important;
+        text-align: justify;
     }
 }
